# scml-vis

./: .gitignore  .python-version  .vimspector.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  restore_git_repos.bat  restore_git_repos.sh  setup.cfg
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
config/: coverage.ini
docs/reference/: cli.md
scripts/: multirun.sh  setup.sh
src/scml_vis/: __init__.py  __main__.py  cli.py  compiler.py  presenter.py  utils.py
tests/: __init__.py  test_cli.py
