[bumpversion]
current_version = 0.2.11
delete_bookmark = True
commit = False
tag = False

[metadata]
name = scml-vis
version = "0.2.11"
description = "A simple visualiser for SCML worlds and tournaments"
authors = ["Yasser Mohammad <yasserfarouk@gmail.com>"]
license = Apache License 2.0
readme = "README.md"
repository = "https://github.com/scml-vis/scml-vis"
homepage = "https://github.com/scml-vis/scml-vis"
author_email = yasserfarouk@gmail.com
keywords = 
	negotiation
	mas
	multi-agent
	simulation
	AI
	negmas
	scml
	scml-agents
url = https://github.com/yasserfarouk/negmas
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/x-rst
classifiers = 
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython

[options]
package_dir = 
	=src
packages = scml_vis
install_requires = 
	Click (>=6.0)
	numpy
	pandas
	seaborn
	streamlit (>=1.9.0)
	plotly
	click
	click-config-file
	watchdog
	datasette-vega
	csvs-to-sqlite
	scml
include_package_data = True
python_requires = >=3.8
dependency_links = 

[options.entry_points]
console_scripts = 
	scmlv=scml_vis.cli:main
	scml-vis=scml_vis.cli:main
	scmlvis=scml_vis.cli:main

[options.extras_require]
dev = 
	autoflake
	black
	isort
	mypy
	pytest
	pytest-cov
	pytest-randomly
	pytest-sugar
	pytest-xdist

[bumpversion:file:setup.cfg]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:src/scml_vis/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[mypy]
warn_unused_configs = False
warn_incomplete_stub = True
check_untyped_defs = True
python_version = 3.8
strict_optional = False
ignore_missing_imports = False

[mypy-setup.*]
check_untyped_defs = False
